--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
-<%- include("header");-%>
+<%- include("partials/header");-%>
 
 <h1>Great</h1>
 
-<%- include("footer");-%>
+<%- include("partials/footer");-%>
