--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,4 @@
-<%- include("header");-%>
+<%- include("partials/header");-%>
 
 <div class="upper">
   <div class="upper-left">
@@ -36,4 +36,4 @@
    <!-- </ul> -->
 </div>
 
-<%- include("footer")-%>
+<%- include("partials/footer")-%>
